--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Nombre:</h1>
-    <h1>Skype:</h1>
+    <h1>Nombre: Kevin Steep Suarez Ibañez</h1>
+    <h1>Programa: Ingenieria en Sistemas</h1>
+    <h1>Fecha de creacion: 04/09/20</h1>
+    <h1>Skype: Kevin Suarez</h1>
+    <h1>WhatsApp: 3224660059</h1>
+    <h1>Correo Electronico: kevinsteep3@gmail.com</h1>
 </body>
 </html>
