--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,5 +12,9 @@
     <h1>Skype: Kevin Suarez</h1>
     <h1>WhatsApp: 3224660059</h1>
     <h1>Correo Electronico: kevinsteep3@gmail.com</h1>
+    <nav>
+        <ul class-"menu">
+            <li><a href="planning.html">Vinculo</li></a>
+        </nav>
 </body>
 </html>
