--- a/planning.html
+++ b/planning.html
@@ -19,6 +19,6 @@
     <h2>Contenido</h2>
     <p></p>
     <h2>Maquetación</h2>
-    <img src="Mokup.PNG" alt=Maquetación>
+    <img src="Maquetación.bmpr" alt=Maquetación>
 </body>
 </html>
