--- a/planning.html
+++ b/planning.html
@@ -17,7 +17,7 @@
     <p>Video <br> https://www.youtube.com/watch?v=3XlZWpLwvvo</p>
     <p>Conceptos <br> http://cessor.blogspot.com/2018/03/git-y-github-conceptos-basicos.html#:~:text=Una%20de%20estas%20herramientas%20es,desarrolladores%20en%20un%20mismo%20proyecto.</p>
     <h2>Contenido</h2>
-    <p></p>
+    <p>En este sitio web se podra encontrar información sobre las herramientas GIT y GITHUB.<br> Las cuales nos ayudaran a la hora del desarrollo de sitios web para el desarrollo de soluciones a problematicas presentes y tambien nos permitiran realizar entornos interactivos de aprendizaje logrando asi satisfacer y cumplir las espectativas propuestas. </p>
     <h2>Maquetación</h2>
     <img src="Maquetación.bmpr" alt=Maquetación>
 </body>
