--- a/planning.html
+++ b/planning.html
@@ -19,6 +19,6 @@
     <h2>Contenido</h2>
     <p>En este sitio web se podra encontrar información sobre las herramientas GIT y GITHUB.<br> Las cuales nos ayudaran a la hora del desarrollo de sitios web para el desarrollo de soluciones a problematicas presentes y tambien nos permitiran realizar entornos interactivos de aprendizaje logrando asi satisfacer y cumplir las espectativas propuestas. </p>
     <h2>Maquetación</h2>
-    <img src="Maquetación.bmpr" alt=Maquetación>
+    <img src="Maquetación o Mokup.PNG" alt=Maquetación>
 </body>
 </html>
